# tide-example

./: .env.example  .envrc.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
db/: schema.sql
migrations/: 20200913181151_initial.sql
src/: main.rs  utils.rs
src/records/: article.rs  mod.rs
src/routes/: articles.rs  mod.rs
src/templates/: articles.rs  mod.rs
templates/: layout.html  welcome.html
templates/articles/: form.html  index.html  show.html
