[package]
name = "tide-example"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
publish = false

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
tide = "0.15.0"
sqlx = { version = "0.3.5", features = ["sqlite", "chrono"] }
askama = { version = "0.10.5", features = ["with-tide"] }
serde = "1.0.125"
serde_urlencoded = "0.7.0"
askama_tide = "0.13.0"
async-sqlx-session = { version = "0.2.1", features = ["sqlite"] }
