[package]
name = "tide-example"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
publish = false

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
tide = "0.16.0"
sqlx = { version = "0.3.5", features = ["sqlite", "chrono"] }
askama = { version = "0.11.0", features = ["with-tide"] }
serde = "1.0.135"
serde_urlencoded = "0.7.1"
askama_tide = "0.14.0"
async-sqlx-session = { version = "0.2.1", features = ["sqlite"] }
